crates/flowlog-build/tests/errors/parser/undeclared_in_rule.dl
.decl foo(a: number)
foo(x) :- ghost_rel(x).
